* configpeer.jsp: Limit max displayed banned IPs     * jobs.jsp: Cleanup     * eepsite_index_de.html: localhost -> 127.0.0.1     * readme*html: localhost -> 127.0.0.1
Monotone-Parent: b7b1d58c94aa76d38404baf73d11df5b2cd2d88e
Monotone-Revision: b4d190aa50d6f665f337769a29fd7b5cb0fda3be

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-08-14T17:39:05

--- a/installer/resources/eepsite_index_de.html
+++ b/installer/resources/eepsite_index_de.html
@@ -14,12 +14,12 @@ vertreten durch Ihre Eepsite – von anderen im I2P-Netz und, soweit
 verfügbar, über private „Out-Proxys“ weltweit erreichbar sein.</p>
 
 <p>In I2P werden Eepsites unter Verwendung eines Schlüssels (key) adressiert, dieser wird durch eine sehr lange Base64-Zeichenkette<sup><a class="footref" name="fnr.1" href="#fn.1">1</a></sup> dargestellt.
-(Dieser Schlüssel ist analog zur Standard IP-Adresse zu verstehen; man kann ihn sich in der Konfiguration für Eepsites unter <a href="http://localhost:7657/i2ptunnel/index.jsp">I2PTunnel</a> anzeigen lassen.)</p>
+(Dieser Schlüssel ist analog zur Standard IP-Adresse zu verstehen; man kann ihn sich in der Konfiguration für Eepsites unter <a href="http://127.0.0.1:7657/i2ptunnel/index.jsp">I2PTunnel</a> anzeigen lassen.)</p>
 
 <p>Folgende Anweisungen sollen zeigen, wie man einer Eepsite einen
 Namen wie beispielsweise „meineseite.i2p“ zuweist und an dem Schlüssel
 bindet.
-Sie können Ihre Eepsite, nachdem sie gestartet wurde, lokal unter <a href="http://localhost:7658/">http://localhost:7658/</a> erreichen.</p>
+Sie können Ihre Eepsite, nachdem sie gestartet wurde, lokal unter <a href="http://127.0.0.1:7658/">http://127.0.0.1:7658/</a> erreichen.</p>
 
 <p>Es folgt eine schrittweise Anleitung für das Starten Ihrer neuen Eepsite und dessen Ankündigung in der I2P-Gemeinde.</p>
 
@@ -39,10 +39,10 @@ und hat verschiedene Wege um Ihre Eepsite bekannt zu machen.</p>
 <ol>
 <li>Wählen Sie einen eigenen Namen für Ihre Eepsite – nur in diesem
 Beispiel heißt sie „meineseite.i2p“ – benutzen Sie nur Kleinschrift.
-Sie können in Ihrem <a href="http://localhost:7657/susidns/addressbook.jsp?book=router">Adressbuch</a> überprüfen, ob der gewünschte Name bereits vergeben ist (Anmerkung: die Daten aus den Adressbuch werden im Klartext in der <em>i2p/hosts.txt</em> gespeichert).
+Sie können in Ihrem <a href="http://127.0.0.1:7657/susidns/addressbook.jsp?book=router">Adressbuch</a> überprüfen, ob der gewünschte Name bereits vergeben ist (Anmerkung: die Daten aus den Adressbuch werden im Klartext in der <em>i2p/hosts.txt</em> gespeichert).
 <br>
 <br></li>
-<li>Rufen Sie nun, möglichst in einem neuen Browser-Fenster, die Konfiguration für Eepsites <a href="http://localhost:7657/i2ptunnel/index.jsp">I2PTunnel</a> auf. Unter „Local Server Tunnels“ wählen Sie den Eintrag „<a href="http://localhost:7657/i2ptunnel/edit.jsp?tunnel=3">eepsite</a>“.
+<li>Rufen Sie nun, möglichst in einem neuen Browser-Fenster, die Konfiguration für Eepsites <a href="http://127.0.0.1:7657/i2ptunnel/index.jsp">I2PTunnel</a> auf. Unter „Local Server Tunnels“ wählen Sie den Eintrag „<a href="http://127.0.0.1:7657/i2ptunnel/edit.jsp?tunnel=3">eepsite</a>“.
 Sie befinden sich nun auf der Seite mit Überschrift „Edit server
 settings“. In das Feld für „Website name:“ überschreiben Sie die
 Vorgabe „mysite.i2p“ mit Ihrem Wunschnamen. Optional geben Sie im Feld
@@ -60,9 +60,9 @@ Ihr <em>privates</em> Adressbuch geschrieben (<em>i2p/privatehosts.txt</em>).
 <li>Jetzt sichern Sie Ihre Einstellungen indem Sie auf „Save“ klicken.
 <br>
 <br></li>
-<li>Wir gehen wieder zurück auf die Konfigurationsseite <a href="http://localhost:7657/i2ptunnel/index.jsp">I2PTunnel</a>
+<li>Wir gehen wieder zurück auf die Konfigurationsseite <a href="http://127.0.0.1:7657/i2ptunnel/index.jsp">I2PTunnel</a>
 und drücken den „Start“-Knopf für die „eepsite“. Nach dem erfolgreichen
-Start wird Ihre Eepsite auf der linken Seite in der I2P <a href="http://localhost:7657/index.jsp">Router Console</a> unter „Local
+Start wird Ihre Eepsite auf der linken Seite in der I2P <a href="http://127.0.0.1:7657/index.jsp">Router Console</a> unter „Local
 Destinations“ angezeigt.</li>
 </ol>
 
@@ -71,14 +71,14 @@ Destinations“ angezeigt.</li>
 <h4>Das Veröffentlichen vorbereiten</h4>
 
 <ol>
-<li>Heben Sie in der „<a href="http://localhost:7657/i2ptunnel/edit.jsp?tunnel=3">Konfiguration</a>“
+<li>Heben Sie in der „<a href="http://127.0.0.1:7657/i2ptunnel/edit.jsp?tunnel=3">Konfiguration</a>“
 den gesamten Schlüssel für Ihre Eepsite hervor und kopieren ihn in die
 Zwischenablage. Stellen Sie sicher auch tatsächlich die gesamte, über
 500 Zeichen lange Zeichenkette die auf „AAAA“ endet, „erwischt“ zu
 haben.
 <br>
 <br></li>
-<li>Öffnen Sie Ihr <a href="http://localhost:7657/susidns/addressbook.jsp?book=master">Master-Adressbuch</a>,
+<li>Öffnen Sie Ihr <a href="http://127.0.0.1:7657/susidns/addressbook.jsp?book=master">Master-Adressbuch</a>,
 tragen Ihren zuvor gewählten Wunschnamen ihrer Eepsite unter „Hostname“
 ein und kopieren den Schlüssel in das Feld „Destination“. Ein Klick auf
 „Add“ und diese „Destination“ ist in Ihrem Adressbuch.<sup><a class="footref" name="fnr.2" href="#fn.2">2</a></sup>
@@ -102,7 +102,7 @@ Verzeichnis <em>„i2p/Eepsite/docroot“</em> und benennen Sie dieses Dokument 
 <li>Nun ist es an der Zeit, Ihre Eepsite in einem globalen I2P-Adressbuch, wie beispielsweise bei <a href="http://stats.i2p/i2p/addkey.html">stats.i2p</a>,
 einzutragen. Das heißt, Sie müssen Namen und Schlüssel Ihrer Eepsite
 und eine optionale Beschreibung in ein Formular auf einen oder mehreren
-dieser Seiten eingeben. Wie schon oben gesagt, Ihr Schlüssel ist der <em>vollständige</em> Schlüssel wie er in der <a href="http://localhost:7657/i2ptunnel/index.jsp">I2PTunnel</a> Konfiguration für die „<a href="http://localhost:7657/i2ptunnel/edit.jsp?tunnel=3">Eepsite</a>“
+dieser Seiten eingeben. Wie schon oben gesagt, Ihr Schlüssel ist der <em>vollständige</em> Schlüssel wie er in der <a href="http://127.0.0.1:7657/i2ptunnel/index.jsp">I2PTunnel</a> Konfiguration für die „<a href="http://127.0.0.1:7657/i2ptunnel/edit.jsp?tunnel=3">Eepsite</a>“
 im Feld „Local destination“ angegeben ist (... über 500 Zeichen, endet
 auf „AAAA“). Bestätigen Sie Ihre Angaben mit einem klick auf „Submit“.
 Überprüfen Sie ob Ihr Schlüssel tatsächlich hinzugefügt wurde.
@@ -114,7 +114,7 @@ Ihre Eesite durch
 den Eintrag des Namens im Browser aufzurufen.
 <br>
 <br></li>
-<li>Weil wir gerade von Adressbuchupdates sprechen – es ist eine gute Zeit um weitere Adressbücher dem bestehenden <a href="http://localhost:7657/susidns/subscriptions.jsp">Abonnement</a>
+<li>Weil wir gerade von Adressbuchupdates sprechen – es ist eine gute Zeit um weitere Adressbücher dem bestehenden <a href="http://127.0.0.1:7657/susidns/subscriptions.jsp">Abonnement</a>
 hinzuzufügen. Öffnen Sie Ihre Konfiguration und fügen Sie einige der
 folgenden Dienste Ihrem Abonnement hinzu (nur die jeweilige URL) und
 speichern Sie die Angaben.<sup><a class="footref" name="fnr.3" href="#fn.3">3</a></sup> Ab jetzt erhalten Sie ebenso alle Updates automatisch!
