--- a/readme.html
+++ b/readme.html
@@ -13,7 +13,7 @@
   up, you can: 
 <ul>
   <li><b>browse "eepsites"</b> - on I2P there are anonymously hosted websites 
-    - tell your browser to use the <b>HTTP proxy at localhost port 4444</b>, then 
+    - tell your browser to use the <b>HTTP proxy at 127.0.0.1 port 4444</b>, then 
     browse to an eepsite:<br />
     <ul class="links">
       <li><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> 
@@ -53,7 +53,7 @@
         bundle <a href="/susimail/susimail">susimail</a>, a web based anonymity-oriented 
         pop3/smtp client configured to access postman's mail services.</li>
       <li class="tidylist"><b>chat anonymously</b> - fire up your own IRC client 
-        and connect to the server at <b>localhost port 6668</b>. This points at 
+        and connect to the server at <b>127.0.0.1 port 6668</b>. This points at 
         one of two anonymously hosted IRC servers, but neither you nor they know 
         where the other is.</li>
       <li class="tidylist"><b>blog anonymously</b> - check out <a href="http://syndie.i2p2.de/">Syndie</a></li>
@@ -62,20 +62,20 @@
 </ul>
 <h2>Want your own eepsite?</h2>
 <p>We've bundled some software to let you run your own eepsite - a <a href="http://jetty.mortbay.org/">Jetty</a> 
-  instance listening on <a href="http://localhost:7658/">http://localhost:7658/</a>. 
+  instance listening on <a href="http://127.0.0.1:7658/">http://127.0.0.1:7658/</a>. 
   Simply place your files in the <code>eepsite/docroot/</code> directory (or place 
   any standard JSP/Servlet <code>.war</code> files under <code>eepsite/webapps</code>, 
   or standard CGI script under <code>eepsite/cgi-bin</code>) and they'll show 
   up. After starting up an <a href="/i2ptunnel/">eepsite tunnel</a> pointing at 
   it, your eepsite will be visible to others. Detailed instructions for starting 
-  your eepsite are on <a href="http://localhost:7658/">your temporary eepsite 
+  your eepsite are on <a href="http://127.0.0.1:7658/">your temporary eepsite 
   page</a>. </p>
 <h2><a name="trouble">Troubleshooting</a></h2>
 <p>Be patient - I2P may be slow to start the first time as it searches for peers. 
   If, after 30 minutes, your Active: connected/recent count has less than 10 connected 
   peers, you should open port 8887 on your firewall for better connectivity. If 
   you cannot see any eepsites at all (even <a href="http://www.i2p2.i2p/">www.i2p2.i2p</a>), 
-  be sure your browser proxy is set to localhost port 4444. You may also want 
+  be sure your browser proxy is set to 127.0.0.1 port 4444. You may also want 
   to review the information on the <a href="http://www.i2p2.i2p/">I2P website</a>, 
   post up messages to the <a href="http://forum.i2p2.de/">I2P discussion forum</a>, 
   or swing by #i2p or #i2p-chat on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, 
