--- a/readme_de.html
+++ b/readme_de.html
@@ -5,7 +5,7 @@
 <p>Wenn Du gerade I2P gestartet hast, sollten die "Active:" Zahlen links in den n&auml;chsten paar Minuten anwachsen und Du siehst dann dort ein "shared clients" lokales Ziel gelistet (falls nicht, <a href="#trouble">siehe Unten</a>). Sobald das erscheint, kannst Du:</p>
 <ul>
  <li class="tidylist"><b>"Eepsites" besuchen</b> - In I2P sind anonym gehostete Websites - 
-     Stelle Deinen Browser so ein, &uuml;ber den <b>HTTP proxy: localhost port 4444</b> zu surfen, dann besuche eine Eepsite:<br />
+     Stelle Deinen Browser so ein, &uuml;ber den <b>HTTP proxy: 127.0.0.1 port 4444</b> zu surfen, dann besuche eine Eepsite:<br />
      <ul class="links">
          <li class="tidylist"><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> und
              <a href="http://perv.i2p/stats.cgi">perv.i2p</a>: Webseiten, die aktive Eepsites beobachten</li>
@@ -34,7 +34,7 @@
      Internet-Browser basierter, anonymer pop3/smtp Client, fertig eingerichtet 
      f&uuml;r Postman's Email Service.</li>
  <li class="tidylist"><b>Anonymer Chat</b> - Starte Deinen Lieblings IRC Client und verbinde ihn 
-     mit dem Server <b>localhost Port 6668</b>.  Das richtet Dich auf auf einen 
+     mit dem Server <b>127.0.0.1 Port 6668</b>.  Das richtet Dich auf auf einen 
      von zwei anonym gehosteten IRC Servern, aber weder Du noch die wissen wer 
      der Andere ist.</li>
  <li class="tidylist"><b>Anonymer Blog</b> - Probiere <a href="http://syndie.i2p2.de/">Syndie</a> aus</li>
@@ -46,14 +46,14 @@
 <p>Wir bringen Software mit, damit Du Deine eigene Eepsite laufen lassen kannst 
    - Eine 
 <a href="http://jetty.mortbay.org/">Jetty</a> Instanz horcht auf 
-<a href="http://localhost:7658/">http://localhost:7658/</a>. Platziere einfach 
+<a href="http://127.0.0.1:7658/">http://127.0.0.1:7658/</a>. Platziere einfach 
    Deine Dateien in das <code>eepsite/docroot/</code> Verzeichnis (oder jedes 
    standart JSP/Servlet <code>.war</code> unter <code>eepsite/webapps</code>, 
    oder CGI Scripte unter <code>eepsite/cgi-bin</code>) und schon sind sie 
    verf&uuml;gbar.  Nach dem Start des <a href="/i2ptunnel/">Eepsite tunnels</a>
    der darauf zeigt ist Deine Eepsite f&uuml;r Andere verf&uuml;gbar. 
    Detailierte Instruktionen zum Start Deiner eigenen Eepsite sind auf
-   <a href="http://localhost:7658/">Deine tempor&auml;re Eepsite</a>.
+   <a href="http://127.0.0.1:7658/">Deine tempor&auml;re Eepsite</a>.
 </p>
 
 <h2><a name="trouble">Troubleshooting</a></h2>
@@ -65,7 +65,7 @@
   f&uuml;r bessere Verbindung zu sorgen.
   Wenn Du gar keine Eepsites bekommst (auch nicht 
   <a href="http://www.i2p2.i2p/index_de.html">www.i2p2.i2p</a>), stelle sicher, dass Dein 
-  Internet Browser auf den Proxy localhost Port 4444 eingestellt ist.
+  Internet Browser auf den Proxy 127.0.0.1 Port 4444 eingestellt ist.
   Vielleicht m&ouml;chtest Du auch die Informationen lesen, die auf der 
   <a href="http://www.i2p2.i2p/index_de.html">I2P website</a> sind, Nachrichten lesen und 
   ins <a href="http://forum.i2p2.de/">I2P discussion forum</a> posten, oder 
