--- a/readme_sv.html
+++ b/readme_sv.html
@@ -9,7 +9,7 @@ nedan</a>). N&auml;r de syns kan du:</p>
 <ul>
  <li><b>surfa p&aring; "eepsidor"</b> - inom I2P finns det anonyma sajter - 
      st&auml;ll in din webbl&auml;sare till att anv&auml;nda <b>HTTP proxy vid 
-localhost port 4444</b>, surfa sen till en eepsida:<br /> 
+127.0.0.1 port 4444</b>, surfa sen till en eepsida:<br /> 
      <ul class="links">
          <li><a 
 href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> och
@@ -55,7 +55,7 @@ href="http://hq.postman.i2p/">hq.postman.i2p</a>.
 till att ansluta till postmans email-tj&auml;nst.</li>
  <li><b>chatta anonymt</b> - starta din IRC-klient och anslut till 
 servern vid 
-     <b>localhost port 6668</b>.  Den pekar mot en av tv&aring; anonyma IRC 
+     <b>127.0.0.1 port 6668</b>.  Den pekar mot en av tv&aring; anonyma IRC 
 servrar,
 	men varken du eller dom vet var den andra &auml;r.</li>
  <li><b>blogga anonymt</b> - kika p&aring; <a 
@@ -67,7 +67,7 @@ href="http://syndie.i2p2.de/">Syndie</a></li>
 
 <p>Vi har skickat med mjukvara som l&aring;ter dig driva en egen eepsida - en 
 <a href="http://jetty.mortbay.org/">Jetty</a> instans lyssnar p&aring; 
-<a href="http://localhost:7658/">http://localhost:7658/</a>.  L&auml;gg helt 
+<a href="http://127.0.0.1:7658/">http://127.0.0.1:7658/</a>.  L&auml;gg helt 
 enkelt dina filer i
 <code>eepsite/docroot/</code> mappen (eller standard JSP/Servlet 
 <code>.war</code>
@@ -77,7 +77,7 @@ s&aring; kommer de synas.  N&auml;r du startat en <a href="/i2ptunnel/">eepsite
 tunnel</a> som pekar p&aring; Jetty-server, s&aring; kommer sajten vara m&ouml;jlig att n&aring; f&ouml;r 
 alla andra.
 Mer detaljerade instruktioner f&ouml;r att skapa en eepsite finns p&aring; 
-<a href="http://localhost:7658/">din tillf&auml;lliga eepsite</a>.
+<a href="http://127.0.0.1:7658/">din tillf&auml;lliga eepsite</a>.
 </p>
 
 <h2><a name="trouble">Problem</a></h2>
@@ -90,7 +90,7 @@ noder, b&ouml;r du &ouml;ppna port 8887 i din brandv&auml;gg.
 Om du inte lyckas bes&ouml;ka n&aring;gra eepsidor alls (inte ens <a 
 href="http://www.i2p2.i2p/">www.i2p2.i2p</a>),
 f&ouml;rs&auml;kra dig om att din webbl&auml;sare &auml;r inst&auml;lld till att av&auml;nda en proxy, 
-localhost p&aring; port 4444.
+127.0.0.1 p&aring; port 4444.
 Du kanske ocks&aring; vill kika p&aring; information p&aring;  
 <a href="http://www.i2p2.i2p/">I2Ps webbsida</a>, fr&aring;ga fr&aring;gor p&aring;  
 <a href="http://forum.i2p2.de/">I2P diskussions forumet</a>, eller kika 
