* Streaming, I2PSession:       Prep for SessionKeyManager work in the router -       Comment out, deprecate, and javadoc for unused keys and tags,       they are vestiges of end-to-end crypto
Monotone-Parent: ea1eef423ad28aeca876a9a2b92af26c4829e389
Monotone-Revision: 56e25f73e1d503164eda4e0e8a98b5c5f81125bd

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-08-22T22:55:37

--- a/apps/ministreaming/java/src/net/i2p/client/streaming/package.html
+++ b/apps/ministreaming/java/src/net/i2p/client/streaming/package.html
@@ -16,9 +16,9 @@ net.i2p.client.streaming.I2PServerSocket#accept} method, which will provide an
 application wants to create a new stream to a peer, it should do so with the
 appropriate {@link net.i2p.client.streaming.I2PSocketManager#connect} call.</p>
 
-<p>There is a simple pair of demo applications available as well - {@link
-net.i2p.client.streaming.StreamSinkServer} listens to a destination and dumps 
-the data from all sockets it accepts to individual files, while {@link
-net.i2p.client.streaming.StreamSinkClient} connects to a particular destination
+<p>There is a simple pair of demo applications available as well -
+net.i2p.client.streaming.StreamSinkServer listens to a destination and dumps 
+the data from all sockets it accepts to individual files, while
+net.i2p.client.streaming.StreamSinkClient connects to a particular destination
 and sends a specific amount of random data then disconnects.</p>
 </body></html>
