* added paste.i2p2.i2p to readme[LANG=EN] * added paste.i2p2.i2p to readme[LANG=DE]
Monotone-Parent: 6199603651b9fab5b9659f927bce9edfff2221d8
Monotone-Revision: b0854af170b1973f5dd1fb73c7266f35942cfc41

Monotone-Author: dev@welterde.de
Monotone-Date: 2009-10-03T18:11:58
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -32,6 +32,8 @@ up, you can:</p>
         Freenet proxy</li>
       <li><a href="http://echelon.i2p">echelon.i2p</a>: software 
         archive and information for I2P</li>
+      <li><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: secure and 
+        anonymous paste service.</li>
     </ul></ul><ul>
       There are many more eepsites - just follow the links from the ones you see, 
       bookmark your favorites, and visit them often! 
