--- a/readme_de.html
+++ b/readme_de.html
@@ -16,6 +16,7 @@
          <li class="tidylist"><a href="http://ugha.i2p/">ugha.i2p</a>: Ugha's Eepsite, ein &ouml;ffentliches Wiki mit vielen Links</li>
          <li class="tidylist"><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: Freenet proxy</li>
 	 <li class="tidylist"><a href="http://echelon.i2p">echelon.i2p</a>: Software Archive und Informationen zu I2P</li>
+         <li class="tidylist"><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: Anonymer Pastebin</li>
 	</ul><br />
      Es gibt viel mehr Eepsites - folge einfach den Links die du findest,
      bookmarke Deine Favoriten und besuche sie oft!</li><br />
