doc and eepsite index updates
Monotone-Parent: 2995ad26b674863ab3bfe58f2fd6f103f403643b
Monotone-Revision: c03bacd7c3ed043276617cb71019d3c4b21fcc23

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-10-07T17:12:00
Monotone-Branch: i2p.i2p

--- a/installer/resources/eepsite_index_de.html
+++ b/installer/resources/eepsite_index_de.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css" href="eepsite.css">
   </head><body>
     <h1>Willkommen zu Ihrer Eepsite!</h1>
-<p>Diese ist Ihre <strong>Eepsite</strong>, Ihre Web-Präsens über I2P. Editieren Sie einfach die Dateien unter <em>i2p/eepsite/docroot/</em>
+<p>Diese ist Ihre <strong>Eepsite</strong>, Ihre Web-Präsens über I2P. Editieren Sie einfach die Dateien unter
+<em>~/.i2p/eepsite/docroot/</em> (Linux) oder <em>%APPDATA%\I2P\eepsite\docroot\</em> (Windows)
 und nachdem Sie den Anweisungen weiter unten gefolgt sind, werden Sie –
 vertreten durch Ihre Eepsite – von anderen im I2P-Netz und, soweit
 verfügbar, über private „Out-Proxys“ weltweit erreichbar sein.</p>
@@ -93,7 +94,8 @@ Adresse hat sich geändert.
 <br></li>
 <li>Bevor Sie der Welt von Ihrer neuen Eepsite berichten sollte sie
 auch über ein wenig Inhalt verfügen. Begeben Sie sich in das
-Verzeichnis <em>„i2p/Eepsite/docroot“</em> und benennen Sie dieses Dokument von <em>„index.html“</em> nach <em>„hilfe.html“</em> um, so können Sie später darauf zurück greifen. Erstellen Sie Ihre eigene <em>„index.html“</em> und füllen diese mit Inhalten, Bildern oder was auch immer Sie anderen hierüber mitteilen wollen.</li>
+Verzeichnis <em>„~/.i2p/eepsite/docroot/“</em> (Linux) oder <em>„%APPDATA%\I2P\eepsite\docroot\“</em> (Windows)
+und benennen Sie dieses Dokument von <em>„index.html“</em> nach <em>„hilfe.html“</em> um, so können Sie später darauf zurück greifen. Erstellen Sie Ihre eigene <em>„index.html“</em> und füllen diese mit Inhalten, Bildern oder was auch immer Sie anderen hierüber mitteilen wollen.</li>
 </ol>
 
 <h4><a name="AnkerDEOeA" id="AnkerDEOeA"></a>Die Eepsite öffentlich ankündigen</h4>
