--- a/installer/resources/eepsite_index.html
+++ b/installer/resources/eepsite_index.html
@@ -7,7 +7,8 @@
  <body>
  <h1>Welcome to your eepsite</h1>
 <p>(<a href="index_de.html">Deutsch</a>)</p>
- <p>This is your eepsite - simply edit the files under ./eepsite/docroot/ 
+ <p>This is your eepsite - simply edit the files under
+ ~/.i2p/eepsite/docroot/ (Linux) or %APPDATA%\I2P\eepsite\docroot\ (Windows)
  and they'll be reachable by others once you follow the instructions below.
  In I2P, eepsites are addressed using a 'key', which is represented as a really long Base64 string.
  (The 'key' is somewhat analogous to an IP address, and
@@ -50,7 +51,8 @@
  <li>In your browser, enter in your eepsite name (<i>something</i>.i2p) and you should
      be right back here. Hopefully it worked.
  <li>Before you tell the world about your new eepsite, you should add some content.
-     Go to i2p/eepsite/docroot and copy this document (index.html) to help.html so you can refer to it later.
+     Go to ~/.i2p/eepsite/docroot/ (Linux) or %APPDATA%\I2P\eepsite\docroot\ (Windows)
+     and copy this document (index.html) to help.html so you can refer to it later.
      Now edit index.html and add content, pictures, and whatever you would like to share.
  <li>Now it's time to add your eepsite to an I2P address book hosted by a site
      such as <a href="http://stats.i2p/">stats.i2p</a>.
