Update readmes to include pastebin and echelon's software archive; minor layout tweak for English readme.
Monotone-Parent: 3ad948ece037941e8ef3755d3a001e44f2e37918
Monotone-Revision: eff67df754e95e6994fb25ab1b022a21dc34cbfb

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-10-09T13:52:36
Monotone-Branch: i2p.i2p

--- a/readme_fr.html
+++ b/readme_fr.html
@@ -14,7 +14,9 @@
           <li class="tidylist"><a href="http://eepsites.i2p/">eepsites.i2p</a>: un moteur de recherche d'eepsites</li>
           <li class="tidylist"><a href="http://ugha.i2p/">ugha.i2p</a>: l'eepsite d'ugha, un wiki que chaucun peut &eacute;diter ainsi que</li>
           <li class="tidylist"><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: un proxy Freenet 0.5</li>
-	  <li class="tidylist"><a href="http://echelon.i2p">echelon.i2p</a>: archive</li><br />
+	  <li class="tidylist"><a href="http://echelon.i2p">echelon.i2p</a>: archive</li>
+	  <li class="tidylist"><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: Pastebin anonyme</li>
+	  <br />
      </ul>
      Il y a bien plus d'eepsites - suivez juste les liens au d&eacute;part de ceux sur lesquels vous &ecirc;tes, mettez-les dans vos favoris et visitez-les souvent!</li><br />
   <li class="tidylist"><b>Parcourez le web</b> - Il y a pour l'instant un outproxy HTTP sur I2P attach&eacute; &agrave; votre propre proxy HTTP sur le port 4444 - vous devez simplement configurer le proxy de votre navigateur pour l'utiliser (comme expliqu&eacute; ci-dessus) et aller sur n'importe quel URL normale - vos requ&ecirc;tes seront relay&eacute;es par le r&eacute;seau i2p.</li>
