--- a/readme_nl.html
+++ b/readme_nl.html
@@ -8,12 +8,15 @@
      <ul>
          <li><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> en
              <a href="http://perv.i2p/stats.cgi">perv.i2p</a>: sites die lijsten bijhouden van actieve eepsites</li>
-         <li><a href="http://forum.i2p/">forum.i2p</a>: een beveiligde en anonieme verbinding naar<a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
+         <li><a href="http://forum.i2p/">forum.i2p</a>: een beveiligde en anonieme verbinding naar <a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
          <li><a href="http://www.i2p2.i2p/">www.i2p2.i2p</a> en de kopie <a href="http://i2p-projekt.i2p">i2p-projekt.i2p</a>:
               beveiligde en anonieme verbindingen naar <a href="http://www.i2p2.de/">www.i2p2.de</a></li>
          <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: een anoniem gehoste zoekmachine voor eepsites</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsite, een wiki die door iedereen aangepast kan worden, met veel links</li>
          <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: proxy naar het Freenet-netwerk</li>
+         <li><a href="http://echelon.i2p">echelon.i2p</a>: software 
+        archive and information for I2P</li>
+	       <li class="tidylist"><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: anonieme Pastebin</li>         
      </ul><br />
      Er zijn nog veel meer eepsites - volg gewoon de links vanaf diegene die je ziet. Voeg de beste toe aan je favorieten, en bezoek ze regelmatig!</li><br />
  <li><b>surfen op het web</b> - er is momenteel een HTTP "outproxy" in I2P, vastgehaakt aan je eigen HTTP proxy op poort 4444 - stel eenvoudigweg de proxy van je browser in om deze te gebruiken (zoals hierboven voor eepsites) en ga naar een willekeurige normale URL - je verzoeken voor websites worden rondgestuurd via het I2P-network.</li>
