Whitespace rationalization; theme enhancements; draft itoopie graphic for proxy errors.
Monotone-Parent: 0e7ca8624b2a0c9556108bf4fb1cdb121718995d
Monotone-Revision: ca71a7d5f75cc879cfd2ba742bcc1d9baa6f9099

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-10-12T23:55:21
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -14,7 +14,7 @@ up, you can:</p>
 <ul>
   <li><b>browse "eepsites"</b> - on I2P there are anonymously hosted websites 
     - tell your browser to use the <b>HTTP proxy at 127.0.0.1 port 4444</b>, then 
-    browse to an eepsite:<br />
+    browse to an eepsite:<br>
     <ul class="links">
       <li><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> 
         and <a href="http://perv.i2p/stats.cgi">perv.i2p</a>: sites tracking active 
