--- a/readme_sv.html
+++ b/readme_sv.html
@@ -9,7 +9,7 @@ nedan</a>). N&auml;r de syns kan du:</p>
 <ul>
  <li><b>surfa p&aring; "eepsidor"</b> - inom I2P finns det anonyma sajter - 
      st&auml;ll in din webbl&auml;sare till att anv&auml;nda <b>HTTP proxy vid 
-127.0.0.1 port 4444</b>, surfa sen till en eepsida:<br /> 
+127.0.0.1 port 4444</b>, surfa sen till en eepsida:<br>
      <ul class="links">
          <li><a 
 href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> och
@@ -30,9 +30,9 @@ wiki som alla kan f&ouml;r&auml;ndra, inneh&aring;ller m&aring;nga l&auml;nkar</
 Freenet proxy</li>
 	 <li><a href="http://echelon.i2p">echelon.i2p</a>: programvaruförråd och information om I2P</li>
 	 <li><a href="http://paste.i2p2.i2p">paste.i2p2.i2p</a>: anonym och säker pastebin</li>
-     </ul><br />
+     </ul><br>
      Det finns m&aring;nga fler eepsidor - f&ouml;lj bara l&auml;nkarna fr&aring;n dom du ser,
-     spara dina favoriter och bes&ouml;k dom ofta!</li><br />
+     spara dina favoriter och bes&ouml;k dom ofta!</li><br>
  <li><b>surfa p&aring; n&auml;tet</b> - det finns f&ouml;r n&auml;rvarande en "utproxy" i I2P 
 som &auml;r ansluten
      till din egen HTTP proxt p&aring; port 4444 - st&auml;ll helt enkelt in din 
