--- a/readme_zh.html
+++ b/readme_zh.html
@@ -7,7 +7,7 @@
     <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
 </div>
 <h2>欢迎使用 I2P!</h2>
-<p>如果 I2P 已经运行，未来的几分钟里控制台左侧的活动节点(Active)数量将会增加，并会出现名为共享客户端("shared clients") 的本地目标。(如果没有,请见 <a href="/i2p-zhcn/i2psrc/i2p.i2p/readme_zh.html#trouble">疑难解答</a>)。待出现以上消息后，您可以:</p>
+<p>如果 I2P 已经运行，未来的几分钟里控制台左侧的活动节点(Active)数量将会增加，并会出现名为共享客户端("shared clients") 的本地目标。(如果没有,请见 <a href="#trouble">疑难解答</a>)。待出现以上消息后，您可以:</p>
 <ul>
  <li><B>浏览 I2P 站点 "eepsites"</B> -  I2P 网络内匿名运行的小站 - 您要首先设置浏览器的 <b>HTTP 代理</b> 为 127.0.0.1:4444 然后才能浏览 I2P 站点 - <ul>
          <li><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> 和 <a href="http://perv.i2p/stats.cgi">perv.i2p</a>:&nbsp;这两个站点用于跟踪哪些 I2P 站点在线。</li>
@@ -21,7 +21,7 @@
      </ul> <br>
       I2P网络中还有很多其他网站(EEPSITE) - 访问上面的网站你会找到更多，收藏你喜爱的 I2P 网站，别忘了常去看看！</li><br>
  <li><b>浏览 Web 网页</b> - 目前 IP2 网络中的出口代理("Outproxy")只有一个，它以HTTP代理的形式挂接在本地计算机的4444端口上。- 将浏览器的代理设置指向为上述地址(127.0.0.1:4444)后，访问任何普通链接即可 - 您的HTTP请求将在 I2P 网络内部传递。</li>
- <li><b>文件交换</b> - I2P的其中一个本地&nbsp;<a href="/i2p-zhcn/i2psrc/i2p.i2p/i2psnark/">端口</a>&nbsp;用于内置的&nbsp;<a href="http://www.klomp.org/snark/">Snark</a> <a href="http://www.bittorrent.com/">BitTorrent</a> 客户端。</li>
+ <li><b>文件交换</b> - I2P的其中一个本地&nbsp;<a href="/i2psnark">端口</a>&nbsp;用于内置的&nbsp;<a href="http://www.klomp.org/snark/">Snark</a> <a href="http://www.bittorrent.com/">BitTorrent</a> 客户端。</li>
  <li><b>匿名电邮</b> - POSTMAN 建立了兼容普通邮件客户端 (POP3 / SMTP)的邮件系统，这个系统可以在 I2P 网络内部收发 Email 也可以收发来自外部 Internet 的邮件！I2P的邮件帐户请到 <a href="http://hq.postman.i2p/">hq.postman.i2p</a> 申请。I2P中集成了Web界面的pop3/stmp邮件客户端 <a href="/susimail/susimail">SUSIMail</a>，并已设置好使用POSTMAN 的邮件服务。</li>
  <li><b>匿名聊天</b> - 打开你的 IRC 聊天程序，连接至 <b>127.0.0.1:6668&nbsp;</b>即可访问I2P的匿名 IRC 服务器，但无论你还是服务器都不知道聊天的人在哪里。</li>
  <li><b>匿名博客</b> - 请访问 <a href="http://syndie.i2p2.de/">Syndie</a></li>
