--- a/readme_zh.html
+++ b/readme_zh.html
@@ -6,7 +6,7 @@
     <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> 
     <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
 </div>
-<h2>欢迎使用 I2P!</h2>
+<div class="welcome"><h2>欢迎使用 I2P!</h2></div>
 <p>如果 I2P 已经运行，未来的几分钟里控制台左侧的活动节点(Active)数量将会增加，并会出现名为共享客户端("shared clients") 的本地目标。(如果没有,请见 <a href="#trouble">疑难解答</a>)。待出现以上消息后，您可以:</p>
 <ul>
  <li><B>浏览 I2P 站点 "eepsites"</B> -  I2P 网络内匿名运行的小站 - 您要首先设置浏览器的 <b>HTTP 代理</b> 为 127.0.0.1:4444 然后才能浏览 I2P 站点 - <ul>
