--- a/readme.html
+++ b/readme.html
@@ -6,7 +6,7 @@
     <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> 
     <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
 </div>
-<h2>Welcome to I2P!</h2>
+<div class="welcome"><h2>Welcome to I2P!</h2></div>
 <p>If you've just started I2P, the Active: numbers on the left should start to 
   grow over the next few minutes and you'll see a "shared clients" local destination 
   listed on the left (if not, <a href="#trouble">see below</a>). Once those show 
@@ -37,7 +37,7 @@ up, you can:</p>
     </ul><br>
       There are many more eepsites - just follow the links from the ones you see, 
       bookmark your favorites, and visit them often! 
-    </li><br>
+    </li>
     <ul>
       <li class="tidylist"><b>browse the web</b> - there is currently an HTTP 
         "outproxy" in I2P hooked up to your own HTTP proxy on port 4444 - simply 
