More UI whitespace removals and optimizations.
Monotone-Parent: 0ed7d9c28c031f487bfadaa2d1292e2b6819c059
Monotone-Revision: 04a866845951827a73eca1d18d9552b2a9acb72a

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-10-17T07:04:40
Monotone-Branch: i2p.i2p

--- a/readme_nl.html
+++ b/readme_nl.html
@@ -4,7 +4,7 @@
 <div class="welcome"><h2>Welkom bij I2P!</h2></div>
 <p>Als je net I2P opgestart hebt, zullen de 'Active:' (Actieve) getallen aan de linkerkant in de komende minuten stijgen, en je zal een "Shared clients" (Gedeelde clients) lokale bestemming zien staan aan de linkerkant (indien niet, <a href=#trouble>zie hieronder</a>). Eenmaal je deze bestemming ziet, kan je:</p>
 <ul>
- <li><b>surfen naar "eepsites"</b> - op I2P zijn er anonieme websites - stel je browser in om de <b>HTTP proxy op 127.0.0.1, poort 4444</b> te gebruiken, en surf vervolgens naar een eepsite:<br><br>
+ <li><b>surfen naar "eepsites"</b> - op I2P zijn er anonieme websites - stel je browser in om de <b>HTTP proxy op 127.0.0.1, poort 4444</b> te gebruiken, en surf vervolgens naar een eepsite:<br>
      <ul>
          <li><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> en
              <a href="http://perv.i2p/stats.cgi">perv.i2p</a>: sites die lijsten bijhouden van actieve eepsites</li>
