Sidepanel space efficiencies; "paperclips" for index.jsp links; fix news.xml link.
Monotone-Parent: 520a970bf95f418a753fec7bb53477141f56fd43
Monotone-Revision: 20558aa1ddb68816b82d1257696ce2417ef3e89d

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-10-21T16:34:43
Monotone-Branch: i2p.i2p

--- a/readme_zh.html
+++ b/readme_zh.html
@@ -9,7 +9,7 @@
 <div class="welcome"><h2>欢迎使用 I2P!</h2></div>
 <p>如果 I2P 已经运行，未来的几分钟里控制台左侧的活动节点(Active)数量将会增加，并会出现名为共享客户端("shared clients") 的本地目标。(如果没有,请见 <a href="#trouble">疑难解答</a>)。待出现以上消息后，您可以:</p>
 <ul>
- <li><B>浏览 I2P 站点 "eepsites"</B> -  I2P 网络内匿名运行的小站 - 您要首先设置浏览器的 <b>HTTP 代理</b> 为 127.0.0.1:4444 然后才能浏览 I2P 站点 - <ul><br>
+ <li><B>浏览 I2P 站点 "eepsites"</B> -  I2P 网络内匿名运行的小站 - 您要首先设置浏览器的 <b>HTTP 代理</b> 为 127.0.0.1:4444 然后才能浏览 I2P 站点 - <ul class="links">
          <li><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> 和 <a href="http://perv.i2p/stats.cgi">perv.i2p</a>:&nbsp;这两个站点用于跟踪哪些 I2P 站点在线。</li>
          <li><a href="http://forum.i2p/">forum.i2p</a>:I2P官方论坛 <a href="http://forum.i2p2.de/">forum.i2p2.de</a>&nbsp;的匿名入口&nbsp;(个人的I2P站点会在论坛的EEPSITE讨论区发布)</li>
          <li><a href="http://www.i2p2.i2p/">www.i2p2.i2p</a> 与镜像 <a href="http://i2p-projekt.i2p/">i2p-projekt.i2p</a>:&nbsp;可以安全匿名的访问I2P官网 <a href="http://www.i2p2.de/">www.i2p2.de</a></li>
